--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ permalink: /
 {% include ui/masthead/hero.html %}
 {% include ui/items/tracksuit.html %}
 {% include ui/items/shop.html %}
+{% include ui/items/swa.html %}
 {% include ui/items/shop2.html %}
 {% include ui/items/hoodie.html %}
 {% include ui/testimonial/testimonial.html %}
